# taxi-ai

./: .gitignore  Cargo.toml  dioxus.toml  weather.csv
.cargo/: config.toml
src/: lib.rs  main.rs
src/chart/: features.rs  mod.rs
src/clean/: io.rs  mod.rs  preproc.rs
src/cmd/: args.rs
