[package]
name = "taxi-ai"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { version = "1.0.98", features = ["backtrace"] }
burn = { version = "*", features = ["wgpu"] }
charming = { version = "*", features = ["wasm"] }
console_error_panic_hook = "*"
dioxus = { version = "0.6.3", features = ["web"] }
dioxus-logger = "0.6.2"
itertools = "*"
num = "*"
polars = { version = "*", features = [
  "full",
  "fmt",
  "performant",
  "trigonometry",
  "cov",
  "dataframe_arithmetic",
  "ndarray",
  "to_dummies",
] }
rayon = "*"
thiserror = "*"
tracing = "*"
tracing-subscriber = { version = "*", features = ["local-time"] }
wasm-bindgen = "0.2"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.wasm-dev.package."*"]
opt-level = 3

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"

[profile.release]
codegen-units = 1
lto = "thin"
opt-level = "s"
strip = "debuginfo"


[profile.release-native]
inherits = "release"
opt-level = 3
strip = "none"
